pkg/tests/testthat/errors/test_singular1.R
library(isismdl)
library(testthat)

# rm(list = ls())
#
# mdl <- isis_mdl("mdl/singular1.mdl", period = "2011")
# print(mdl$get_solve_options())
# mdl$set_values(0)
# mdl$set_solve_options(dbgopt = c("prifb", "prijac"), maxiter = 1,
#                       svdtest_tol = 1e-10)
# mdl$solve()


 # solve(method = broyden; dbgopt = prifb, prijac; svdtest_tol = 1e-10);

